Product list with cart, fix cart title alignment

--- a/13-product-list-with-cart/product-list-with-cart-react/src/components/Cart.module.css
+++ b/13-product-list-with-cart/product-list-with-cart-react/src/components/Cart.module.css
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: white;
     border-radius: 12px;
     padding: var(--spacing-300);
